--- a/code/Rmarkdown/problem-summary.Rmd
+++ b/code/Rmarkdown/problem-summary.Rmd
@@ -5,6 +5,9 @@ output:
     toc: true
 ---
 
+# The Data
+OPEN: Summarise the data here and where they come from
+Also explain autocorrelation and time structure
 # General Problem
 
 In our case we have information about monthly sea surface emperature (SST) and monthly precipitation in the Central Amazonas Basin.
@@ -158,8 +161,56 @@ $X$ is $n x p$, and p > n, therefore fat and
 $$rank(x) = rank(X^TX) \leq n < p $$
 So $X^TX$ does not have full rank and is not invertible.
 
-# The LASSO
+Comment:
+We could still use pseudo inverse to find the best solution.
+Bu the solution would have a large condition number meaning
+that small changes in the entries of the data can lead to
+large changes in the solution, clearly not desirable
 
+# Shrinkage Mathods
+Subset selection is interpretable, lower prediction error than full model but it is discrete process therefore high variance and doesnt reduce prediction error. shrinkage models are more continuos and dont suffer so much from high variability.
+
+## Ridge
+SEE ESL, p.82 pdf
+Ridge shrinks regression coefficients by adding a penalty on their size.
+
+OPEN: Use mathipix here for Ridge formulas.
+
+$\alpha$ is complexity parameter controlling amount of penalty/shrinkage. Coefficients are shrunk towards each other and zero.
+In general, in linear regression model, with many correlated 
+variables they are poorly determined and suffer from high variance. Size constraint as seen above can help with this problem. Not equivariant under scaling, so standardize before.
+Estimate intercept as average and then use centered inputs.
+Therefore input matrix has p columns (intercept already dropped).
+In matrix notation can be seen that ridge regression solution
+adds positive constant to diag in $X^TX$ therefore even originally singular problems become singular even when $X$
+has not full rank.
+If inputs are orthonormal ridge only rescales least squares estimates.
+SKIP: bayesian interpretation, but. ridge estimate is the mode of posterior distribution. distribution is gaussian, therefore also posterior mean.
+*Singular value decomposition* perspective: Ridge regression
+shrinks according to size of eigenvalues of respective eigenvectors. Along those eigenvectors that explain less variance (smaller eigenvalue) the shrinkage is stronger.
+Those directions with higher explanatory power are preserved.
+see *eigen decompostion*, eigenvectors are called principal components.
+*Implicit assumption*: response will vary with most directions of high variance of inputs. reasonable assumption often but does not need to hold in general.
+
+## Lasso
+Shrinkage method like ridge but difference is l1 norm.
+No closed expression as in ridge.
+Lasso does continous subset selection. If parametrization 
+is done according to $t_0$/2 ($t_0$ sum of magnitude of least squares estimates) the least squares are shrunk by about 50% on average.
+
+## Elastic net
+Compromise between ridge and lasso. Selects variables 
+like lasso, shrinks together coefficients of correlated predictors like ridge, also computationally advantages.
+
+
+
+OPEN: Least Angle, Partial Least Squares, grouped lasso,
+OPEN: multiple outcomes, may be interesting for the different
+  regions.
+  
+
+
+# The LASSO
 We want to create a model that has predictive and
 explanatory power. Predictive power meaning it can
 predict the precipitation in the Central Amazonas Basin, "reasonably well". Explanatory power in the sense of being interpretable, so that we can identify those regions in sea
@@ -189,8 +240,17 @@ How many predictors are included depends on the strength of regularization given
 Elastic net with $\alpha=0.5$ tends to either include or drop the entire group together.
 To specifically choose a group of predictors, variations of the lasso or other models have to be considered.
 
+## Remark on Ridge vs Lasso
+Both settings work in n>p because eigenvalues are added to
+diagonal making the modified cov matrix invertable .
 
-# Preselection of Variables 
+## LASSO general
+ESL p.64 (83 in pdf)
+Subset selection is interpretable, lower prediction error than full model but it is discrete process therefore high variance and doesnt reduce prediction error. shrinkage models are more continuos and dont suffer so much from high variability
+LASSO minimizes penalized residual sum of squares.
+
+
+# Preselection of Variables/Preconditioning see ESL 18.6 
 Before fitting an actual model we can compute crude correlation values between precipitation and each sea grid point.
 We can thereby identify regions that are more strongly correlated with the precipitation than others.
 We might "preselect" regions and hence possible predictors by using only a certain amount of those strongly correlated sea regions.
@@ -226,29 +286,37 @@ or do we use the information of different timepoints and regions?
 Network approach to the regularised (grouped) prediction problem.
 
 
-# Open
-General assumptions of linear models
-General assumptions LASSO
-Check clean, unified notation
-Definition unbiased
-Q:
-intuition behind estimated $\beta_1$, denominator looks like covariance
-Q: do we say when the conditional expectation is 0 and conditional variance is sigma, that they are independent?
-Q: how do we formalise the conditional independence of the $y_i$´s given $x$?
-Q:
-Expected value is minimising mean squared error
-	but we use sum of sqaured errors, 
-	Expectation minimises both?
-Q:
-Least squares fitting is reasonable if trainig observations are independent random draws from population, even if not random still valid, if y_i conditionally independent given input xi.
-Q: 
-Does that mean for example after accounting for confounders the y_i are cond independent?
-*Remark*: RSS makes no assumption about validity of model. If we can predict well, we say model is good enough.
+# Fused LASSO
+Group Lasso for structurally grouped features.
+Fused Laso structural grouping arises from underlying index
+set such as time or for our case location (SL with spars)
+See Paper send by Fabi
+""
 
-# Resources: 
-All of statistics
-   Linear and Logistic Regression
-ESL
-  Linear Methods for Regression
+
+# Open
+General assumptions of linear models\
+General assumptions LASSO \
+Check clean, unified notation\
+Definition unbiased\
+Q: Intuition behind estimated $\beta_1$, denominator looks like covariance\
+Q: do we say when the conditional expectation is 0 and conditional variance is sigma, that they are independent?\
+Q: how do we formalise the conditional independence of the $y_i$´s given $x$?\
+Q:Expected value is minimising mean squared error
+but we use sum of sqaured errors, 
+Expectation minimises both?\
+Q: Least squares fitting is reasoable if trainig observations are independent random draws from population, even if not random still valid, if y_i conditionally independent given input xi.\
+Q: Does that mean for example after accounting for confounders the y_i are cond independent?\
+*Remark*: RSS makes no assumption about validity of model. If we can predict well, we say model is good enough.
+Checkout: Non-negative Garotte
+Q: What are the requirements for 1,0? How do you meaure/ which
+criteria are used?
+Relevant:
+https://journals.ametsoc.org/view/journals/clim/aop/jcliD200079/jcliD200079.xml
+
+
+# Resources
+All of statistics\
+ESL\
 https://www.le.ac.uk/users/dsgp1/COURSES/THIRDMET/MYLECTURES/1REGRESS.pdf
 https://www.math.arizona.edu/~tgk/464_07/cond_exp.pdf
